--- a/scss/_doc.scss
+++ b/scss/_doc.scss
@@ -8,6 +8,7 @@
 	font-size: $font-size-11;
 	background: linear-gradient(to right, $blue-3 10%, $blue-7 99%);
 	-webkit-background-clip: text;
+	// background-clip:inherit;
 	-webkit-text-fill-color: transparent;
 }
 .title-how-to {
@@ -50,8 +51,9 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	align-items: stretch;
-	justify-content: center;
+	justify-content: flex-start;
 	text-align: center;
+	margin-left: 2rem;
 }
 .sidebar-nav-link {
 	width: 36%;
@@ -84,6 +86,7 @@
 		flex-direction: column;
 		flex-wrap: wrap;
 		text-align: left;
+		margin-left: 0;
 	}
 	.sidebar-nav-link {
 		width: 90%;
@@ -127,17 +130,18 @@ details[open] {
 }
 
 .iframe-container {
-	width: 100%;
-	margin: 1rem;
-	text-align: center;
-	overflow: hidden;
+	width: 100% !important;
 	height: 100% !important;
 }
-iframe {
+.iframe-container iframe {
+
+
+	height: 100% !important;
 	width: 100% !important;
-	border: none;
+	border: none !important;
 	transform: scale(1);
-	overflow: hidden;
+
+	// overflow: hidden;
 }
 
 //utilities?
@@ -179,6 +183,16 @@ iframe {
 .card {
 	width: 50%;
 }
+// card small screen only
+@media screen and (max-width: $size-md) {
+	.card-wrapper {
+		display: flex;
+		flex-direction: column;
+	}
+	.card {
+		width: 100%;
+	}
+}
 
 // toast
 
@@ -195,15 +209,16 @@ iframe {
 }
 
 #toast-demo.open {
-	display: flex;
+	display: block;
 }
-
-@media (min-width: $size-sm) {
+// position toast on small screen
+@media screen and (max-width: $size-md) {
 	#toast-demo {
-		width: auto;
-		left: 50%;
-		right: auto;
-		transform: translateX(-50%);
+		position: relative;
+		bottom: 10;
+		left: 10;
+		right: 10;
+		margin: 10 auto;
 	}
 }
 
@@ -216,7 +231,7 @@ iframe {
 
 .to-top {
 	position: fixed;
-	z-index: 1000;
+	z-index: 9;
 	right: 1rem;
 	bottom: 1.6rem;
 	cursor: pointer;
