--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -7,7 +7,7 @@
 	transition: $transition-speed-1;
 }
 .navbar {
-	z-index: 999;
+	z-index: 99;
 	position: fixed;
 	background-color: $bg-primary;
 	transition: width $transition-speed-5 ease;
@@ -132,7 +132,6 @@ svg {
 	}
 }
 
-
 // search
 
 #search-box {
@@ -140,13 +139,13 @@ svg {
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	background: rgba(0, 0, 0, .8);
+	background: rgba(0, 0, 0, 0.8);
 
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 999999999;
+	z-index: 999;
 
 	.container {
 		display: table;
@@ -170,7 +169,7 @@ svg {
 		.close:after {
 			position: absolute;
 			left: 15px;
-			content: ' ';
+			content: " ";
 			height: 33px;
 			width: 2px;
 			background-color: white;
@@ -202,8 +201,8 @@ svg {
 				border: none;
 				box-shadow: none;
 				padding: 12px 74px 12px 0;
-				font-size: 72px;
-				height: 84px;
+				font-size: $font-size-5;
+				height: $font-size-11;
 				border-bottom: 2px solid white;
 				display: block;
 				color: white;
@@ -216,23 +215,16 @@ svg {
 				&:focus {
 					outline: none;
 				}
-
 			}
-
-			button {
-				border: 0;
-				left: auto;
-				outline: none;
-				padding: 0;
-				position: absolute;
-				right: 0;
-				top: 0.3em;
-				bottom: 0.3em;
-				background: transparent;
-				font-size: 43px;
+			// hide search info in mobile
+			@media (max-width: $size-sm) {
+				.search-info {
+					display: none !important;
+				}
 			}
 
 			.search-info {
+				font-size: $font-size-2;
 				display: block;
 				color: white;
 				text-align: right;
@@ -242,11 +234,10 @@ svg {
 		}
 	}
 
-
 	&.-open {
-		background: rgba(0, 0, 0, .8);
+		background: rgba(0, 0, 0, 0.8);
 		visibility: visible;
-		animation: fadein .8s;
+		animation: fadein 0.8s;
 
 		.container {
 			.search-main {
@@ -264,7 +255,6 @@ svg {
 	from {
 		opacity: 0;
 	}
-
 	to {
 		opacity: 1;
 	}
